modified cv file

--- a/watch-the-latest-video-presentation-featuring-chatgpt-midjourney-pictory-audacity-and-shotcut.html
+++ b/watch-the-latest-video-presentation-featuring-chatgpt-midjourney-pictory-audacity-and-shotcut.html
@@ -74,8 +74,11 @@
 
     <section>
         <div class="container-video">
-            <div class="iframe-container">
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/KE6uEQTRhEM" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+            <div >
+                <img src="assets/imgs/maciej_suit.jpg" alt="" style="max-width: 60%; 
+                display: block;
+                margin-left: auto;
+                margin-right: auto;">
             </div>
             <br>
             <hr>
