added new page for my blog section - quality island internship summary

--- a/index.html
+++ b/index.html
@@ -319,6 +319,25 @@
             <!-- blog-wrapper -->
             <div class="blog-card">
                 <div class="blog-card-header">
+                    <a href="software_testing_internship_with_selenium_java_postman_quality_island.html"><img src="assets/imgs/quality_island_project.png" class="blog-card-img" alt="futuristic robot"></a>
+                </div>
+                <div class="blog-card-body">
+                    <h5 class="blog-card-title">Quality Island | Manual & Automation Tester Internship</h6>
+
+                    <p class="blog-card-caption">
+                        <a href="#">By: Maciej Jaroszewski</a>
+                    </p>
+                    <p><b>
+                        I practiced QA in a real-world environment in addition to learning it. From manual testing to automated Selenium scripts and Postman API testing, this program equipped me with real-world expertise that will help me when I enter the job. Along with Java basics and AI technologies, this course prepared me to contribute right away to any QA team. 
+                        Learn how I integrated theory and practice while working as a Quality Island intern, where I tested a real web application for a corporate client both manually and automatically.
+                    </b></p>
+                    <a href="software_testing_internship_with_selenium_java_postman_quality_island.html" class="blog-card-link">Read more <i class="ti-angle-double-right"></i></a>
+                </div>
+            </div><!-- end of blog wrapper -->
+
+            <!-- blog-wrapper -->
+            <div class="blog-card">
+                <div class="blog-card-header">
                     <a href="unlock-sphinx-magic-easy-python-documentation-with-sphinx.html"><img src="assets/imgs/post-01.png" class="blog-card-img" alt="futuristic robot"></a>
                 </div>
                 <div class="blog-card-body">
