updated index.html file

--- a/recent-projects.html
+++ b/recent-projects.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Python Web Development Projects: Live Examples of Deployed Websites on Various Platforms</title>
+    <title>Recent Projects: Latest Examples of My Software Testing and Development Initiatives</title>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="Looking for live deployment examples of web development projects? Look no further than my portfolio website! Featuring Django, Flask, FastAPI, and more, I showcase my Python skills with live website deployments on PythonAnywhere, Deta, Vercel, Netlify, and other platforms. Explore my collection of projects and see the results for yourself. Contact me today to discuss your own deployment needs.">
@@ -9,14 +9,14 @@
     <meta id="keywords" name="keywords" content="live deployment examples for portfolio projects, django, python, flask, fastapi, pythonanywhere, deta, vercel, netlify" />
     <meta property="og:site_name" content="https://mjaroszewski.website" />
     <meta property="og:url" content="https://mjaroszewski.website/live-projects.html" />
-    <meta property="og:title" content="Python Web Development Projects: Live Examples of Deployed Websites on Various Platforms" />
+    <meta property="og:title" content="Recent Projects: Latest Examples of My Software Testing and Development Initiatives" />
     <meta property="og:description" content="Looking for live deployment examples of web development projects? Look no further than my portfolio website! Featuring Django, Flask, FastAPI, and more, I showcase my Python skills with live website deployments on PythonAnywhere, Deta, Vercel, Netlify, and other platforms. Explore my collection of projects and see the results for yourself. Contact me today to discuss your own deployment needs." />
     <meta property="og:type" content="article" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@NatLife_quest" />
     <meta name="twitter:url" content="https://mjaroszewski.website" />
-    <meta name="twitter:title" content="Python Web Development Projects: Live Examples of Deployed Websites on Various Platforms" />
+    <meta name="twitter:title" content="Recent Projects: Latest Examples of My Software Testing and Development Initiatives" />
     <meta name="twitter:description" content="Looking for live deployment examples of web development projects? Look no further than my portfolio website! Featuring Django, Flask, FastAPI, and more, I showcase my Python skills with live website deployments on PythonAnywhere, Deta, Vercel, Netlify, and other platforms. Explore my collection of projects and see the results for yourself. Contact me today to discuss your own deployment needs." />
     <meta name="twitter:image" content="https://mjaroszewski.website/assets/imgs/web-dev-django.png" />
     
@@ -78,8 +78,8 @@
         <section class="section" id="blog">
             <!-- container -->
             <div class="container text-center">
-                <p class="section-subtitle text-light"><strong>Web Development</strong></p>
-                <h6 class="section-title mb-6 text-light">Deployment Examples</h6>
+                <p class="section-subtitle text-light"><strong>Quality Control</strong></p>
+                <h6 class="section-title mb-6 text-light">Software Testing Examples</h6>
                 <!-- blog-wrapper -->
 
                 <div class="blog-card">
