updated heading section in index.html file

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
   <head>
     <title>
-      From AI to Quantitative Finance: Exploring the Portfolio Website of a
-      Software Engineer
+      From QA to Software Development: Exploring the Portfolio Website of a
+      Automation Tester
     </title>
     <meta charset="utf-8" />
     <meta
@@ -118,7 +118,7 @@
           <span class="up">HELLO!</span>
           <span class="down">I am Maciej</span>
         </h1>
-        <p class="header-subtitle">TECH-SAVVY ENTHUSIAST</p>
+        <p class="header-subtitle">AUTOMATION ENTHUSIAST</p>
 
         <a href="recent-projects.html"
           ><button class="btn btn-primary">View Recent Projects</button></a
