added images and descriptions for --recent projects-- section of index.html file

--- a/recent-projects.html
+++ b/recent-projects.html
@@ -84,27 +84,25 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/famous-investors.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/java_selenium_project.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application utilizes the Django framework and its Object-Relational Mapper (ORM) to facilitate the retrieval of stored data.</h6>
-                        <p><b>It is connected to a MySQL database hosted on the Pythonanywhere server. The software's primary objective is to enable users to execute complex filtering operations while prioritizing the speed and efficiency of querying.
-                            By utilizing this software, users can save valuable time by executing advanced filtering operations quickly and efficiently. Additionally, the software's Python and Django backend offer flexibility and customizability, making it an ideal choice for users who want to customize their querying process to fit their specific needs.
+                        <h5 class="blog-card-title">Automated testing project developed using Java and Selenium for an e-commerce web application currently in its pre-production phase.</h6>
+                        <p><b>Took full ownership of the "Settings" module within the e-commerce web application, which allows users to sell courses, digital products, and services. Developed end-to-end (E2E) automated tests based on client-provided business requirements.
                         </b></p>
-                        <a href="http://mjapp.pythonanywhere.com/" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Live</button></a>
+                        <a href="https://github.com/mjaroszewski1979/qi_internship_project" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View GitHub Repo</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/golden-cross.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/playwright_ts_project.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This is a Python application that is designed to display trading signals based on a mathematical algorithm.</h6>
-                        <p><b>The algorithm determines the ideal time to buy or sell Bitcoin. The application fetches data from the Yahoo Finance API and calculates the current trend direction using a 252-day lookback period which is approximately one year.
-                            Once the calculations are complete, the results are presented in a user-friendly table format. This application is ideal for traders who are looking to make data-driven decisions when it comes to buying or selling Bitcoin. With the help of the algorithm, the application can analyze large amounts of data and provide recommendations on when to make a move.
+                        <h5 class="blog-card-title">This is a TypeScript-based automated end-to-end (E2E) testing project built using Playwright.</h6>
+                        <p><b>It is designed to verify the key functionalities of the web application Selenium Shop, a sample e-commerce site. The project follows the Page Object Model (POM) design pattern for clean, scalable, and maintainable test code.
                         </b></p>
-                        <a href="http://taurustrading.pythonanywhere.com/" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Live</button></a>
+                        <a href="https://github.com/mjaroszewski1979/playwright-sel-shop" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View GitHub Repo</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
 
