updated sitemap xml and html file

--- a/recent-projects.html
+++ b/recent-projects.html
@@ -109,13 +109,13 @@
 
                 <div class="blog-card">
                     <div class="blog-card-header">
-                        <img src="assets/imgs/market-bias.png" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
+                        <img src="assets/imgs/postman_project.jpg" class="blog-card-img" alt="Download free bootstrap 4 landing page, free boootstrap 4 templates, Download free bootstrap 4.1 landing page, free boootstrap 4.1.1 templates, meyawo Landing page">
                     </div>
                     <div class="blog-card-body">
-                        <h5 class="blog-card-title">This application is built on Python and Flask, and it leverages the power of Pandas and Plotly to provide historical data of the S&P 500.</h6>
-                        <p><b>To do this, it uses the Pandas Datareader to connect to the Yahoo Finance API and apply various technical analysis tools. One of the standout features of this application is its interactive visualizations, which are made possible by Plotly. Users can easily view market bias and explore different trends. In addition, the website also offers a simple and profitable trading strategy known as Dual Momentum. The application also includes a table of various stock indices, grouped by their one-year rate of change. This table is updated daily and uses historical data sourced from Yahoo Finance API.
+                        <h5 class="blog-card-title">This repository contains a Postman collection for the Simple Books API.</h6>
+                        <p><b>It automates endpoint testing, API availability before running further requests, and handles shared data like access tokens through collection variables. A pre-request script selects an available book ID to ensure order tests function properly. Validation includes JSON schema checks, field-level assertions, and performance metrics.
                         </b></p>
-                        <a href="http://mjaroszewski.pythonanywhere.com/" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View Live</button></a>
+                        <a href="https://github.com/mjaroszewski1979/postman_book_store" class="blog-card-link" target="_blank"><button class="btn btn-info rounded btn-sm">View GitHub Repo</button></a>
                     </div>
                 </div><!-- end of blog wrapper -->
     
