added logo jpg file

--- a/pic.html
+++ b/pic.html
@@ -26,6 +26,6 @@
     </style>
   </head>
   <body>
-    <img src="mockup.jpg" alt="Obraz pełnoekranowy" />
+    <img src="logo.jpg" alt="Obraz pełnoekranowy" />
   </body>
 </html>
