--- a/pic.html
+++ b/pic.html
@@ -3,29 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Obraz na pełnym ekranie</title>
-    <style>
-      html,
-      body {
-        margin: 0;
-        padding: 0;
-        height: 100%;
-        width: 100%;
-      }
+    <title>Logo Filip & Maciej Insurance</title>
 
+    <style>
       body {
-        overflow: hidden; /* Ukrywa paski przewijania */
+        margin: 20px;
+        padding: 0;
+        background-color: #f5f5f5;
+        text-align: center; /* wyśrodkowanie obrazu */
+        font-family: Arial, sans-serif;
       }
 
       img {
-        width: 100%;
-        height: 100%;
-        object-fit: cover; /* Utrzymuje proporcje i wypełnia całe okno */
-        display: block;
+        width: 500px;
+        height: 500px;
+        display: inline-block;
       }
     </style>
   </head>
+
   <body>
-    <img src="logo.jpg" alt="Obraz pełnoekranowy" />
+    <img src="logo.jpg" alt="Logo Filip & Maciej Insurance" />
   </body>
 </html>
