fixed links in top three divs

--- a/index.html
+++ b/index.html
@@ -227,9 +227,9 @@
                   coverage metrics to ensure quality delivery.
                 </p>
                 <ul class="list-unstyled ul-check primary">
-                  <li>ISTQB CTFL v4.0</li>
-                  <li>Atlassian Project Management</li>
-                  <li>LambdaTest Software Testing</li>
+                  <li><a href="https://scr.istqb.org/?name=&number=CTFL4-2023-21616-SJSI&orderBy=relevancy&orderDirection=&dateStart=&dateEnd=&expiryStart=&expiryEnd=&certificationBody=&examProvider=&certificationLevel=&country=" style="color: #818181;" target="_blank">ISTQB CTFL v4.0</a></li>
+                  <li><a href="https://www.linkedin.com/learning/certificates/44e5b85291f459e840a4fd4a7518e5949454da0b8060ef2d45ce7c94069f1ad7?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3B2%2Fo2bqMfRhyOyuzR5BDmyg%3D%3D" style="color: #818181;" target="_blank">Atlassian Project Management</a></li>
+                  <li><a href="https://www.linkedin.com/learning/certificates/748b17c3e1de3c4389b7b4f7244847fee5c8c777357ce329a1d00ae43b2fc663?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3B2%2Fo2bqMfRhyOyuzR5BDmyg%3D%3D" style="color: #818181;" target="_blank">LambdaTest Software Testing</a></li>
                 </ul>
               </div>
             </div>
@@ -250,9 +250,9 @@
                   reusability and maintenance efficiency.
                 </p>
                 <ul class="list-unstyled ul-check primary">
-                  <li>Java Foundations by JetBrains</li>
-                  <li>OpenEDG Python Institute</li>
-                  <li>Mozilla JavaScript Foundations</li>
+                  <li><a href="https://www.linkedin.com/learning/certificates/438da180055e301c495d00fd9c0ca83570177f0811476aaa7086072867c56eb7?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3B2%2Fo2bqMfRhyOyuzR5BDmyg%3D%3D" style="color: #818181;" target="_blank">Java Foundations by JetBrains</a></li>
+                  <li><a href="https://www.linkedin.com/learning/certificates/2873eebe509c13b6daccfac27f1d456fbd03a8f59ff80e75b16164ba460c4f89?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3B2%2Fo2bqMfRhyOyuzR5BDmyg%3D%3D" style="color: #818181;" target="_blank">OpenEDG Python Institute</a></li>
+                  <li><a href="https://www.linkedin.com/learning/certificates/fdce8550a1d8c9874b0228851a861c73efa9781e718c6ca0412f5e6b539d9620?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3B2%2Fo2bqMfRhyOyuzR5BDmyg%3D%3D" style="color: #818181;" target="_blank">Mozilla JavaScript Foundations</a></li>
                 </ul>
               </div>
             </div>
@@ -273,9 +273,9 @@
                   testing experience.
                 </p>
                 <ul class="list-unstyled ul-check primary">
-                  <li>APIsec Certified Practitioner</li>
-                  <li>Postman API Test Automation</li>
-                  <li>MSFT Cybersecurity Essentials</li>
+                  <li><a href="https://www.credly.com/badges/0008bd87-14b0-4e06-9127-d01599349f3e/linked_in_profile" style="color: #818181;" target="_blank">APIsec Certified Practitioner</a></li>
+                  <li><a href="https://badgr.com/public/assertions/H05vvm3DSreb55KMuaO-Bw?identity__email=mjaroszewski1979@gmail.com&action=download" style="color: #818181;" target="_blank">Postman API Test Automation</a></li>
+                  <li><a href="https://www.linkedin.com/learning/certificates/be6cb17f074a25cb08b3ac5e84efb2c344dcc8ef2b0b3b11f5d141b432638903?lipi=urn%3Ali%3Apage%3Ad_flagship3_profile_view_base_certifications_details%3B2%2Fo2bqMfRhyOyuzR5BDmyg%3D%3D" style="color: #818181;" target="_blank">MSFT Cybersecurity Essentials</a></li>
                 </ul>
               </div>
             </div>
