--- a/index.html
+++ b/index.html
@@ -798,58 +798,69 @@
           </div>
           <div class="row">
             <div class="col-md-12 mb-5">
-              <form action="#" class="p-5 bg-white">
-                <h2 class="h4 mb-5">Contact Form</h2>
+            <form
+              class="p-5 bg-white"
+              name="contact"
+              method="POST"
+              data-netlify="true"
+              netlify-honeypot="bot-field"
+            >
+              <input type="hidden" name="form-name" value="contact" />
+              <input type="hidden" name="bot-field" />
 
-                <div class="row form-group">
-                  <div class="col-md-6 mb-3 mb-md-0">
-                    <label class="text-black" for="fname">First Name</label>
-                    <input type="text" id="fname" class="form-control" />
-                  </div>
-                  <div class="col-md-6">
-                    <label class="text-black" for="lname">Last Name</label>
-                    <input type="text" id="lname" class="form-control" />
-                  </div>
+              <h2 class="h4 mb-5">Contact Form</h2>
+
+              <div class="row form-group">
+                <div class="col-md-6 mb-3 mb-md-0">
+                  <label class="text-black">First Name</label>
+                  <input type="text" name="firstName" class="form-control" required />
                 </div>
 
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <label class="text-black" for="email">Email</label>
-                    <input type="email" id="email" class="form-control" />
-                  </div>
+                <div class="col-md-6">
+                  <label class="text-black">Last Name</label>
+                  <input type="text" name="lastName" class="form-control" required />
                 </div>
+              </div>
 
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <label class="text-black" for="subject">Subject</label>
-                    <input type="subject" id="subject" class="form-control" />
-                  </div>
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <label class="text-black">Email</label>
+                  <input type="email" name="email" class="form-control" required />
                 </div>
+              </div>
 
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <label class="text-black" for="message">Message</label>
-                    <textarea
-                      name="message"
-                      id="message"
-                      cols="30"
-                      rows="7"
-                      class="form-control"
-                      placeholder="Write your notes or questions here..."
-                    ></textarea>
-                  </div>
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <label class="text-black">Subject</label>
+                  <input type="text" name="subject" class="form-control" />
                 </div>
+              </div>
 
-                <div class="row form-group">
-                  <div class="col-md-12">
-                    <input
-                      type="submit"
-                      value="Send Message"
-                      class="btn btn-primary btn-md text-white"
-                    />
-                  </div>
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <label class="text-black">Message</label>
+                  <textarea
+                    name="message"
+                    cols="30"
+                    rows="7"
+                    class="form-control"
+                    placeholder="Write your notes or questions here..."
+                    required
+                  ></textarea>
                 </div>
-              </form>
+              </div>
+
+              <div class="row form-group">
+                <div class="col-md-12">
+                  <input
+                    type="submit"
+                    value="Send Message"
+                    class="btn btn-primary btn-md text-white"
+                  />
+                </div>
+              </div>
+            </form>
+
             </div>
           </div>
         </div>
