added github link and icon

--- a/index.html
+++ b/index.html
@@ -58,21 +58,18 @@
             <div class="col-md-6 text-center text-lg-right order-lg-2">
               <ul class="social-media m-0 p-0">
                 <li>
-                  <a href="https://www.facebook.com/profile.php?id=100058399907662" class="p-2" target="_blank"
-                    ><span class="icon-facebook"></span
-                  ></a>
-                </li>
-                <li>
-                  <a href="#" class="p-2"><span class="icon-twitter"></span></a>
-                </li>
-                <li>
-                  <a href="#" class="p-2"
-                    ><span class="icon-instagram"></span
-                  ></a>
-                </li>
-                <li>
                   <a href="https://www.linkedin.com/in/mjaroszewski/" class="p-2" target="_blank"
                     ><span class="icon-linkedin"></span
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://github.com/mjaroszewski1979" class="p-2" target="_blank"
+                    ><span class="icon-github"></span
+                  ></a>
+                </li>
+                <li>
+                  <a href="https://www.facebook.com/profile.php?id=100058399907662" class="p-2" target="_blank"
+                    ><span class="icon-facebook"></span
                   ></a>
                 </li>
               </ul>
@@ -891,11 +888,8 @@
                   <a href="https://www.facebook.com/profile.php?id=100058399907662" class="pl-0 pr-3" target="_blank"
                     ><span class="icon-facebook"></span
                   ></a>
-                  <a href="#" class="pl-3 pr-3"
-                    ><span class="icon-twitter"></span
-                  ></a>
-                  <a href="#" class="pl-3 pr-3"
-                    ><span class="icon-instagram"></span
+                  <a href="https://github.com/mjaroszewski1979" class="pl-3 pr-3"
+                    ><span class="icon-github"></span
                   ></a>
                   <a href="https://www.linkedin.com/in/mjaroszewski/" class="pl-3 pr-3" target="_blank"
                     ><span class="icon-linkedin"></span
