added new email address

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 <span
                   ><a href="tel://#" class="d-flex align-items-center"
                     ><span class="icon-envelope mr-2"></span
-                    ><span>mjaroszewski1979@gmail.com</span></a
+                    ><span>mjaropraca@gmail.com</span></a
                   ></span
                 >
               </p>
