--- a/index.html
+++ b/index.html
@@ -82,6 +82,12 @@
                     ><span>+48 511 826 318</span></a
                   ></span
                 >
+                <span
+                  ><a href="tel://#" class="d-flex align-items-center"
+                    ><span class="icon-envelope mr-2"></span
+                    ><span>mjaropraca@gmail.com</span></a
+                  ></span
+                >
               </p>
             </div>
           </div>
