update style.css to ensure clickability of navbar social links

--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
             <div class="col-md-6 text-center text-lg-left order-lg-1">
               <p class="mb-0 d-inline-flex">
                 <span class="mr-3"
-                  ><a href="tel://#" class="d-flex align-items-center"
+                  ><a href="tel:+48511826318" class="d-flex align-items-center"
                     ><span class="icon-phone mr-2"></span
                     ><span>+48 511 826 318</span></a
                   ></span
                 >
                 <span
-                  ><a href="tel://#" class="d-flex align-items-center"
+                  ><a href="mailto:mjaropraca@gmail.com" class="d-flex align-items-center"
                     ><span class="icon-envelope mr-2"></span
                     ><span>mjaropraca@gmail.com</span></a
                   ></span
